--- a/functions/package.json
+++ b/functions/package.json
@@ -15,8 +15,7 @@
   },
   "main": "lib/index.js",
   "dependencies": {
-    "cloudinary": "^2.7.0",
-    "cors": "^2.8.5",
+    "@google/generative-ai": "^0.24.1",
     "firebase-admin": "^12.6.0",
     "firebase-functions": "^6.0.1"
   },
