--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,6 @@ testem.log
 # System files
 .DS_Store
 Thumbs.db
+
+# Abaikan file environment yang berisi kunci rahasia
+src/environments/environment.ts
